--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
 <body class="hommy">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-  
+
 
 <div class="container-fluid">
 
@@ -33,7 +33,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="Residential.html">Residential</a>
           <a class="dropdown-item" href="Comercial.html">Comercial</a>
-          <a class="dropdown-item" href="Product.html">Product</a>
+          <a class="dropdown-item" href="#">Product</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -41,10 +41,10 @@
           Publication
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="Exhibition.html">Exhibition</a>
+          <a class="dropdown-item" href="#">Exhibition</a>
           <a class="dropdown-item" href="Magazine.html">Magazine</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="Journal.html">Journal</a>
+          <a class="dropdown-item" href="#">Journal</a>
         </div>
       </li>
       <li class="nav-item">
